Overflow fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -526,6 +526,7 @@ body {
 
 .header__site-navigation {
   display: flex;
+  align-items: center;
 }
 
 .header__logo {
@@ -544,6 +545,7 @@ body {
   padding: 0;
 
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -582,6 +584,10 @@ body {
 
 
 /* Хедер (user-navigation) */
+
+.header__user-navigation {
+  flex-shrink: 0;
+}
 
 .header__list {
   list-style-type: none;
@@ -1068,7 +1074,6 @@ input[type='search']::-webkit-search-results-decoration {
 
 .info-banner {
   max-width: 1170px;
-  height: 480px;
   margin: 0 auto;
   margin-top: 80px;
 
@@ -1093,13 +1098,14 @@ input[type='search']::-webkit-search-results-decoration {
 .info-banner__flex-container {
   display: flex;
   margin-top: 56px;
-  gap: 36px;
+  gap: 30px;
 }
 
 .info-banner__collumn {
   display: flex;
   flex-direction: column;
   gap: 40px;
+  flex-basis: 50%;
 }
 
 .info-banner__content {
@@ -1462,7 +1468,6 @@ input[type='search']::-webkit-search-results-decoration {
   margin-top: 40px;
 
   max-width: 1170px;
-  height: 148px;
 }
 
 .filter__container {
@@ -1714,9 +1719,9 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* Наполнители */
 
-.filler-container {
+/* .filler-container {
   height: 68px;
-}
+} */
 
 .filler-container__legend {
   margin-left: 16px;
@@ -1729,17 +1734,18 @@ input[type="number"]::-webkit-inner-spin-button {
   margin-top: 8px;
   padding: 10px 24px;
 
-  height: 40px;
   border-radius: 18px;
   display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
   align-items: center;
   box-sizing: border-box;
   list-style-type: none;
 }
 
-.filler-item:not(:last-child) {
+/* .filler-item:not(:last-child) {
   margin-right: 16px;
-}
+} */
 
 .filler-control {
   position: relative;
